--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,9 +31,10 @@
 
       h2 {
         font-size: 1.25rem;
-        margin-top: 3px;
+        margin-top: -20px;
         color: #555555;
-        font-weight: 100;
+        font-weight: lighter;
+		opacity: 0.8;
       }
     </style>
   </head>
