--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@
 
       h2 {
         font-size: 1.25rem;
-        margin-top: -5px;
+        margin-top: -20px;
         color: #555555;
         font-weight: lighter;
         opacity: 0.8;
@@ -66,7 +66,21 @@
     <script>
       const changingText = document.getElementById('changing-text');
       const cursor = document.getElementById('cursor');
-      let isHello = true;
+      const greetings = [
+        "hello",
+        "hey",
+        "hi",
+        "howdy",
+        "'morning",
+        "'afternoon",
+        "'evening",
+        "greetings",
+        "yo",
+        "'sup",
+        "salutations",
+        "ahoy"
+      ];
+      let currentIndex = 0;
       let intervalId;
       let isPageHidden = false;
 
@@ -98,12 +112,12 @@
 
       function changeText() {
         cursor.classList.add('paused');
-        let currentText = isHello ? 'hello' : 'hey';
-        let newText = isHello ? 'hey' : 'hello';
+        let currentText = greetings[currentIndex];
+        currentIndex = (currentIndex + 1) % greetings.length;
+        let newText = greetings[currentIndex];
 
         removeText(currentText, () => {
           addText(newText, () => {
-            isHello = !isHello;
             cursor.classList.remove('paused');
           });
         });
