--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,11 +102,19 @@
         margin-bottom: 5px;
       }
 
-      .profile-pic {
+      .profile-pic-butcher {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: #cccccc;
+        background-image: url(butcher.jpg);
+        margin-right: 10px;
+      }
+
+      .profile-pic-hughie {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background: url(hughie.jpg);
         margin-right: 10px;
       }
 
@@ -166,19 +174,19 @@
       <div class="content-wrapper">
         <div class="card">
           <div class="message">
-            <div class="profile-pic"></div>
+            <div class="profile-pic-butcher"><img src="butcher.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
             <div class="message-text"><span class="message-name">Billy:</span> heyyyy</div>
           </div>
           <div class="message">
-            <div class="profile-pic"></div>
+            <div class="profile-pic-hughie"><img src="hughie.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
             <div class="message-text"><span class="message-name">Hughie:</span> ..?</div>
           </div>
           <div class="message">
-            <div class="profile-pic"></div>
+            <div class="profile-pic-butcher"><img src="butcher.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
             <div class="message-text"><span class="message-name">Billy:</span> when is the starlight rally?</div>
           </div>
           <div class="message">
-            <div class="profile-pic"></div>
+            <div class="profile-pic-hughie"><img src="hughie.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
             <div class="message-text"><span class="message-name">Hughie:</span> oh, 10:30 mate</div>
           </div>
         </div>
