--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,34 +98,54 @@
 
       .message {
         display: flex;
-        align-items: center;
-        margin-bottom: 5px;
+        align-items: flex-start;
+        margin-bottom: 10px;
       }
 
       .profile-pic-butcher {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-image: url(butcher.jpg);
+        background-image: url('butcher.jpg');
+        background-size: cover;
         margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
       .profile-pic-hughie {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background: url(hughie.jpg);
+        background-image: url('hughie.jpg');
+        background-size: cover;
         margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .message-header {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+
+      .message-name {
+        font-weight: bold;
+      }
+
+      .message-time {
+        opacity: 0.6;
+        font-size: 0.9rem;
+        margin-left: 5px;
       }
 
       .message-text {
         font-size: 1.2rem;
         color: #333333;
-      }
-
-      .message-name {
-        font-weight: bold;
-        margin-right: 5px;
+        margin-top: 5px;
       }
 
       .explanation {
@@ -174,20 +194,44 @@
       <div class="content-wrapper">
         <div class="card">
           <div class="message">
-            <div class="profile-pic-butcher"><img src="butcher.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
-            <div class="message-text"><span class="message-name">Billy:</span> heyyyy</div>
+            <div class="profile-pic-butcher"></div>
+            <div>
+              <div class="message-header">
+                <span class="message-name">Billy</span>
+                <span class="message-time">10:15</span>
+              </div>
+              <div class="message-text">heyyyy</div>
+            </div>
           </div>
           <div class="message">
-            <div class="profile-pic-hughie"><img src="hughie.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
-            <div class="message-text"><span class="message-name">Hughie:</span> ..?</div>
+            <div class="profile-pic-hughie"></div>
+            <div>
+              <div class="message-header">
+                <span class="message-name">Hughie</span>
+                <span class="message-time">10:19</span>
+              </div>
+              <div class="message-text">..?</div>
+            </div>
           </div>
           <div class="message">
-            <div class="profile-pic-butcher"><img src="butcher.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
-            <div class="message-text"><span class="message-name">Billy:</span> when is the starlight rally?</div>
+            <div class="profile-pic-butcher"></div>
+            <div>
+              <div class="message-header">
+                <span class="message-name">Billy</span>
+                <span class="message-time">10:21</span>
+              </div>
+              <div class="message-text">when is the starlight rally?</div>
+            </div>
           </div>
           <div class="message">
-            <div class="profile-pic-hughie"><img src="hughie.jpg" style="max-width:40px; border-radius: 7px" alt="" srcset=""></div>
-            <div class="message-text"><span class="message-name">Hughie:</span> oh, 10:30 mate</div>
+            <div class="profile-pic-hughie"></div>
+            <div>
+              <div class="message-header">
+                <span class="message-name">Hughie</span>
+                <span class="message-time">10:22</span>
+              </div>
+              <div class="message-text">oh, 10:30 mate</div>
+            </div>
           </div>
         </div>
 
@@ -196,7 +240,7 @@
           People who do this are generally trying to be polite by not jumping right into the request, like one would in person or on the phone - and that's great! But it's 2024 and chat is neither of those things. For most people, typing is much slower than talking. So despite best intentions, you're actually just making the other person wait for you to phrase your question, which is <span class="explanation-bold">lost productivity</span> (and kinda annoying).<br><br>
           The same goes for:<br>
           <span class="faded-text">❌ "Hello, are you around?"<br>
-          ❌ "hi sophie - quick question."<br>
+          ❌ "hi neuman - quick question."<br>
           ❌ "You got a sec?"<br>
           ❌ "yt?"<br>
           ❌ "ping"<br>
