--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@
       .card {
         background-color: #ffffff;
         border-radius: 8px;
-        padding: 10px;
+        padding: 8px;
         margin-top: 10px;
         box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
         width: 100%;
@@ -99,7 +99,8 @@
       .message {
         display: flex;
         align-items: flex-start;
-        margin-bottom: 10px;
+        margin-bottom: 8px;
+        padding-top: 3px; /* Added padding to the topmost element inside the card */
       }
 
       .profile-pic-butcher {
@@ -128,24 +129,23 @@
 
       .message-header {
         display: flex;
-        justify-content: space-between;
-        width: 100%;
+        align-items: center;
       }
 
       .message-name {
         font-weight: bold;
+        margin-right: 5px;
       }
 
       .message-time {
         opacity: 0.6;
         font-size: 0.9rem;
-        margin-left: 5px;
       }
 
       .message-text {
-        font-size: 1.2rem;
+        font-size: 1rem;
         color: #333333;
-        margin-top: 5px;
+        margin-top: 4px;
       }
 
       .explanation {
