--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from '../layouts/Layout.astro';
 ---
 
 <html lang="en">
@@ -267,7 +268,6 @@
         </div>
       </div>
 
-      <!-- New Section Starts Here -->
       <div class="try-this">
         <span>✅</span>
         <span class="try-this-text">Instead try this</span>
@@ -330,6 +330,7 @@
       </div>
     </div>
 
+    <Layout />
     <script>
       const changingText = document.getElementById('changing-text');
       const cursor = document.getElementById('cursor');
