--- a/src/pages/it.astro
+++ b/src/pages/it.astro
@@ -188,7 +188,7 @@ import Layout from '../layouts/Layout.astro';
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url('butcher.jpg');
+    background-image: url('https://naai.nz/ip/butcher.jpg');
     background-size: cover;
     margin-right: 10px;
     display: flex;
@@ -200,7 +200,7 @@ import Layout from '../layouts/Layout.astro';
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url('hughie.jpg');
+    background-image: url('https://naai.nz/ip/hughie.jpg');
     background-size: cover;
     margin-right: 10px;
     display: flex;
